Fix auto version updater

--- a/versions.ini
+++ b/versions.ini
@@ -8,14 +8,18 @@ major=1
 minor=0
 assembly_build=0
 assembly_revision=0
-revsion_auto_inc=o
-revision=0
+revision_auto_inc=1
+;revision=0
 out_file=SuperEngine\Properties\AssemblyVersion.cs
+git_command=git describe --dirty --always --long
+remove_tag_prefix=
 [SuperEngineLib]
 major=1
 minor=0
 assembly_build=0
 assembly_revision=0
-revsion_auto_inc=0
-revision=1
+revision_auto_inc=1
+;revision=0
 out_file=SuperEngineLib\Properties\AssemblyVersion.cs
+git_command=git describe --dirty --always --long
+remove_tag_prefix=
