--- a/SuperEngineLib/SuperEngineLib.csproj
+++ b/SuperEngineLib/SuperEngineLib.csproj
@@ -61,11 +61,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Maths\ISplineNode.cs" />
-    <Compile Include="Maths\SplineNodes.cs" />
     <Compile Include="Properties\AssemblyVersion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Objects\GameObject.cs" />
-    <Compile Include="Objects\Terrain.cs" />
     <Compile Include="Editors\TerrainEditor.cs" />
     <Compile Include="Commands\Command.cs" />
     <Compile Include="GUI\Control.cs" />
@@ -74,8 +72,6 @@
     <Compile Include="GUI\Button.cs" />
     <Compile Include="Commands\ParameterGroup.cs" />
     <Compile Include="Commands\Parameter.cs" />
-    <Compile Include="Objects\Spline.cs" />
-    <Compile Include="Objects\MeshObject.cs" />
     <Compile Include="Graphics\Mesh.cs" />
     <Compile Include="Graphics\Texture.cs" />
     <Compile Include="Graphics\Vertex.cs" />
@@ -83,10 +79,18 @@
     <Compile Include="Misc\NotifyPropertyChanged.cs" />
     <Compile Include="Misc\UnixTime.cs" />
     <Compile Include="Misc\ReadOnlyDictionary.cs" />
+    <Compile Include="Maths\SplineNodeBase.cs" />
+    <Compile Include="Maths\SplineNode\SplineNode2.cs" />
+    <Compile Include="Maths\SplineNode\SplineNode2d.cs" />
+    <Compile Include="Maths\SplineNode\SplineNode3.cs" />
+    <Compile Include="Maths\SplineNode\SplineNode3d.cs" />
+    <Compile Include="Maths\SplineNode\SplineNode4.cs" />
+    <Compile Include="Maths\SplineNode\SplineNode4d.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Commands\ParameterGroups\" />
     <Folder Include="Misc\" />
+    <Folder Include="Maths\SplineNode\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
