--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: csharp
 solution: SuperEngine.sln
+before_install:
+  - sudo bash -c "echo deb http://badgerports.org precise main >> /etc/apt/sources.list"
+  - sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 0E1FAD0C
+  - sudo apt-get update
+  - sudo apt-get install mono-devel
 script:
   - xbuild /p:Configuration=Release SuperEngine.sln
   - mono ./packages/xunit.runners.2.0.0-rc1-build2826/tools/xunit.console.exe ./SuperEngine.Tests/bin/Release/SuperEngine.Tests.dll
