Fix build order

--- a/Dependencies/OOGL/GUI/OOGL.GUI.csproj
+++ b/Dependencies/OOGL/GUI/OOGL.GUI.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -81,6 +81,14 @@
     </MonoDevelop>
   </ProjectExtensions>
   <ItemGroup>
+    <ProjectReference Include="..\..\OpenTK\Source\Compatibility\OpenTK.Compatibility.csproj">
+      <Project>{62c0db35-0000-0000-0000-000000000000}</Project>
+      <Name>OpenTK.Compatibility</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\OpenTK\Source\OpenTK\OpenTK.csproj">
+      <Project>{a37a7e14-0000-0000-0000-000000000000}</Project>
+      <Name>OpenTK</Name>
+    </ProjectReference>
     <ProjectReference Include="..\OOGL.csproj">
       <Project>{195AAF4A-3E4C-4FEA-92F6-0CD63FB3FE4B}</Project>
       <Name>OOGL</Name>
@@ -90,11 +98,5 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
-    <Reference Include="OpenTK, Version=1.0.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4">
-      <HintPath>..\..\OpenTK\Binaries\OpenTK\Release\OpenTK.dll</HintPath>
-    </Reference>
-    <Reference Include="OpenTK.Compatibility, Version=1.0.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4">
-      <HintPath>..\..\OpenTK\Binaries\OpenTK\Release\OpenTK.Compatibility.dll</HintPath>
-    </Reference>
   </ItemGroup>
 </Project>
