Reduce warning spam abour depreciated methods

--- a/Dependencies/OOGL/GUI/OOGL.GUI.csproj
+++ b/Dependencies/OOGL/GUI/OOGL.GUI.csproj
@@ -40,6 +40,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DebugSymbols>true</DebugSymbols>
     <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
+    <NoWarn>CS0618</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Abstract\BaseControl.cs" />
