Add build status and try to fix warning spam

--- a/Dependencies/OOGL/OOGL.csproj
+++ b/Dependencies/OOGL/OOGL.csproj
@@ -42,7 +42,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DebugSymbols>true</DebugSymbols>
     <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
-    <NoWarn>CS0618</NoWarn>
+    <NoWarn>0618</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
