--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: csharp
 solution: SuperEngine.sln
 script:
-  - xbuild /p:Configuration=Release SuperEngine.sln
+  - xbuild /p:NoWarn=3006,0618 /p:Configuration=Release SuperEngine.sln
