--- a/Dependencies/OOGL/GUI/OOGL.GUI.csproj
+++ b/Dependencies/OOGL/GUI/OOGL.GUI.csproj
@@ -40,7 +40,8 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DebugSymbols>true</DebugSymbols>
     <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
-    <NoWarn>0618</NoWarn>
+    <NoWarn>
+    </NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Abstract\BaseControl.cs" />
