--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: csharp
 solution: SuperEngine.sln
 script:
-  - xbuild /p:NoWarn=0612,1591 /p:Configuration=Release SuperEngine-Travis-Dependencies.sln
-  - xbuild /p:Configuration=Release SuperEngine-Travis.sln
+#  - xbuild /p:NoWarn=0612,1591 /p:Configuration=Release SuperEngine-Travis-Dependencies.sln
+  - xbuild /p:Configuration=Release SuperEngine.sln
